returned to modifiable list